// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders without crashing 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 auto;
}

<div
    class="emotion-0 emotion-1"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout should set full class with full variant 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 auto;
  max-width: 95%;
}

<div
    class="emotion-0 emotion-1"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout should set large class with large variant 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 auto;
  max-width: 1200px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout should set small class with small variant 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 auto;
  max-width: 1150px;
  padding: 0 1rem;
}

<div
    class="emotion-0 emotion-1"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;
